# blaze

./: .gitattributes  .gitignore  CMakeLists.txt  DEPENDENCIES  Makefile  PHASE_1_RESULTS.md  PHASE_2_RESULTS.md  README.markdown  config.cmake.in  out.trace  package-lock.json  package.json  vendorpull.mask
benchmark/: CMakeLists.txt  alterschema.cc  bundle.cc  compiler_2019_09.cc  compiler_draft6.cc  evaluator_2019_09.cc  evaluator_2020_12.cc  evaluator_draft4.cc  evaluator_draft6.cc  evaluator_draft7.cc  format.cc  foundation.cc  frame.cc  jsonld.cc  regex.cc  validator_helper.cc
benchmark/e2e/: runner.cc
benchmark/files/: 2020_12_iso_language_2023_set_3.json  2020_12_many_invalid_external_refs.json  2020_12_many_resources.json  draft7_w3c_wot_td_v1_1.json
benchmark/instances/: 2019_09_omc_json_v2_1.json  2020_12_openapi_1.json  draft7_dependabot_1.json  draft7_helm_chart_lock_1.json  draft7_helm_chart_lock_2.json  draft7_jasmine_1.json  draft7_vercel_1.json
benchmark/micro/: 2019_09.cc  2020_12.cc  allocator_profile.cc  draft4.cc  draft6.cc  draft7.cc  evaluator_2019_09.cc  evaluator_2020_12.cc  evaluator_draft4.cc  evaluator_draft6.cc  evaluator_draft7.cc  jsonld.cc
benchmark/schemas/: 2020_12_openapi.json  draft7_dependabot.json  draft7_helm_chart_lock.json  draft7_jasmine.json  draft7_vercel.json
bindings/nodejs/: CMakeLists.txt  Makefile  benchmark.js  package.json  test.js  wrapper.cc
contrib/: CMakeLists.txt  canonicalize.cc  compile.cc  document.cc  format_trace_json.py  jsonld.cc  perf.cc  run_corpus.sh  trace.cc  typescript.cc  upgrade.cc  validate-diff.sh  validate.cc
src/allocator/: CMakeLists.txt  allocator.cc
src/alterschema/: CMakeLists.txt  alterschema.cc  schema_rule.cc  transformer.cc  wrap.cc
src/canonicalizer/: CMakeLists.txt  canonicalize.cc  canonicalizer_error.h  canonicalizer_transformer.h  transformer.cc
src/compiler/: CMakeLists.txt  MurmurHash3.cpp  compile.cc  compile_describe.cc  compile_helpers.h  compile_json.cc  compile_output.cc  compile_output_simple.cc  compile_output_trace.cc  default_compiler.cc  default_compiler_2019_09.h  default_compiler_2020_12.h  default_compiler_draft3.h  default_compiler_draft4.h  default_compiler_draft6.h  default_compiler_draft7.h  default_compiler_openapi.h  flatten.h  postprocess.h  unevaluated.cc  vocabulary_lookup.h
src/evaluator/: CMakeLists.txt  context.cc  dispatch.h  dispatch.inc.h  evaluator.cc  evaluator_complete.h  evaluator_describe.cc  evaluator_dynamic.h  evaluator_fast.h  evaluator_instruction.cc  evaluator_json.cc  evaluator_profiling.h  evaluator_string_set.cc  evaluator_track.h  handlers.h  handlers.inc.h
test/alterschema/: CMakeLists.txt  alterschema_canonicalize_2019_09_test.cc  alterschema_canonicalize_2020_12_test.cc  alterschema_canonicalize_draft0_test.cc  alterschema_canonicalize_draft1_test.cc  alterschema_canonicalize_draft2_test.cc  alterschema_canonicalize_draft3_test.cc  alterschema_canonicalize_draft4_test.cc  alterschema_canonicalize_draft6_test.cc  alterschema_canonicalize_draft7_test.cc  alterschema_lint_2019_09_test.cc  alterschema_lint_2020_12_test.cc  alterschema_lint_draft0_test.cc  alterschema_lint_draft1_test.cc  alterschema_lint_draft2_test.cc  alterschema_lint_draft3_test.cc  alterschema_lint_draft4_test.cc  alterschema_lint_draft6_test.cc  alterschema_lint_draft7_test.cc  alterschema_lint_openapi_test.cc  alterschema_schema_rule_test.cc  alterschema_test_utils.h  alterschema_transform_rule_test.cc  alterschema_transform_rules.h  alterschema_transformer_test.cc  alterschema_upgrade_2019_09_to_2020_12_test.cc  alterschema_upgrade_draft3_to_2019_09_test.cc  alterschema_upgrade_draft3_to_2020_12_test.cc  alterschema_upgrade_draft3_to_draft4_test.cc  alterschema_upgrade_draft3_to_draft6_test.cc  alterschema_upgrade_draft3_to_draft7_test.cc  alterschema_upgrade_draft4_to_2019_09_test.cc  alterschema_upgrade_draft4_to_2020_12_test.cc  alterschema_upgrade_draft4_to_draft6_test.cc  alterschema_upgrade_draft4_to_draft7_test.cc  alterschema_upgrade_draft4_to_draft_2019_09_test.cc  alterschema_upgrade_draft6_to_2019_09_test.cc  alterschema_upgrade_draft6_to_2020_12_test.cc  alterschema_upgrade_draft6_to_draft7_test.cc  alterschema_upgrade_draft6_to_draft_2019_09_test.cc  (+4 more)
test/bundle/: CMakeLists.txt  bundle_2019_09_test.cc  bundle_2020_12_test.cc  bundle_dependencies_test.cc  bundle_draft0_test.cc  bundle_draft1_test.cc  bundle_draft2_test.cc  bundle_draft3_test.cc  bundle_draft4_test.cc  bundle_draft6_test.cc  bundle_draft7_test.cc  bundle_test.cc
test/canonicalizer/: CMakeLists.txt  canonicalizer_2019_09_test.cc  canonicalizer_2020_12_test.cc  canonicalizer_draft0_test.cc  canonicalizer_draft1_test.cc  canonicalizer_draft2_test.cc  canonicalizer_draft3_test.cc  canonicalizer_draft4_test.cc  canonicalizer_draft6_test.cc  canonicalizer_draft7_test.cc  canonicalizer_test_utils.h
test/codegen/: CMakeLists.txt  codegen_2020_12_test.cc  codegen_mangle_test.cc  codegen_symbol_test.cc  codegen_test.cc  codegen_test_utils.h
test/compiler/: CMakeLists.txt  compiler_json_test.cc  compiler_output_error_test.cc  compiler_output_error_trace_test.cc  compiler_output_simple_test.cc  compiler_output_standard_basic_test.cc  compiler_output_standard_flag_test.cc  compiler_output_trace_test.cc  compiler_template_format_test.cc  compiler_test_utils.h  compiler_unevaluated_2019_09_test.cc  compiler_unevaluated_2020_12_test.cc
test/configuration/: CMakeLists.txt  configuration_add_dependency_test.cc  configuration_applies_to_test.cc  configuration_fetch_frozen_test.cc  configuration_fetch_test.cc  configuration_find_test.cc  configuration_from_json_test.cc  configuration_json_test.cc  configuration_lock_parse_v1_test.cc  configuration_lock_test.cc  configuration_read_json_test.cc  configuration_test_utils.h  stub-valid-no-path.json  stub-valid.json
test/documentation/: CMakeLists.txt  documentation_2020_12_test.cc  documentation_draft4_test.cc  documentation_html_test.cc  documentation_test_utils.h
test/editor/: CMakeLists.txt  editor_test.cc
test/format/: CMakeLists.txt  (+1 more)
(+825 files in other folders)
